chages not documented

--- a/assets/config/db.properties
+++ b/assets/config/db.properties
@@ -1,5 +1,5 @@
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://{{DB_HOST}}:{{DB_PORT}}/{{DB_NAME}}?autoReconnect=true&characterEncoding=utf8
+db=postgres
+jdbc.driver=org.postgresql.Driver
+jdbc.url=jdbc:postgresql://{{DB_HOST}}:{{DB_PORT}}/{{DB_NAME}}
 jdbc.username={{DB_USER}}
 jdbc.password={{DB_PASS}}
-db=mysql
